# confradar

./: .gitignore  .goreleaser.yml  CLAUDE.md  README.md  go.mod  go.sum  main.go
cmd/: check.go  diff.go  init_cmd.go  list_patterns.go  report.go  root.go  scan.go  version.go
internal/config/: config.go  env_override.go  loader.go  loader_test.go  schema.go
internal/differ/: env_diff.go  env_diff_test.go  types.go
internal/health/: checker.go  checker_test.go  dockerfile_check.go  env_example_sync.go  env_sync.go  file_exists.go  key_exists.go  port_conflict.go  regex_check.go  types.go  version_match.go
internal/parser/: dockerfile.go  env.go  env_test.go  ini.go  json.go  nginx.go  parser.go  text.go  toml.go  yaml.go
internal/renderer/: json.go  markdown.go  renderer.go  table.go  tree.go  yaml.go
internal/scanner/: gitignore.go  matcher.go  scanner.go  scanner_test.go  types.go
internal/tui/: app.go  diff_view.go  file_viewer.go  health_panel.go  help.go  search.go  statusbar.go  styles.go  theme.go  tree_view.go
patterns/: default.yml  embed.go
testdata/custom_config/: .confradar.yml  .env
testdata/custom_config/config/: api.json  gateway.yml
testdata/go_microservice/: .env  Dockerfile  docker-compose.yml  go.mod
testdata/monorepo/: docker-compose.yml  package.json  turbo.json
testdata/node_fullstack/: .env  .env.example  .env.production  .gitignore  Dockerfile  docker-compose.yml  package.json
testdata/python_django/: .env  .env.staging  Dockerfile  docker-compose.yml  pyproject.toml
testdata/python_django/.github/workflows/: test.yml
(+10 files in other folders)
