[project]
name = "myproject"
version = "0.1.0"
description = "A Django web application"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<5.1",
    "psycopg2-binary>=2.9",
    "gunicorn>=22.0",
    "django-environ>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "myproject.settings"
